CSUM-490 -- FE: z-index of navbars and addButton fixed

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -19884,7 +19884,7 @@ textarea {
   outline: none;
   position: fixed;
   right: 1rem;
-  bottom: 2rem;
+  bottom: 5rem;
 }
 
 .btn-add .tooltiptext {
@@ -19903,8 +19903,8 @@ textarea {
   -webkit-box-shadow: 0px 3px 8px rgba(0, 0, 0, 0.15);
           box-shadow: 0px 3px 8px rgba(0, 0, 0, 0.15);
   position: absolute;
-  z-index: 1;
-  bottom: 2rem;
+  z-index: 99999999;
+  bottom: 5rem;
   left: -4rem;
   -webkit-transform: translateX(-50%);
           transform: translateX(-50%);
